--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+@use './assets/scss/variables.scss' as variables;
+@import "./assets/scss/mat.scss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    background-image: url('./assets/images/wallpaper.jpg'); /* Replace with the path to your image */
+    background-attachment: fixed;
+    background-size: cover; /* Adjusts the image to cover the entire background */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-position: center; /* Centers the image */
+    @apply text-sm;
+    overflow: hidden;
+}
+.mac-glass {
+    background: rgba(255, 255, 255, 0.3); /* Translucent white background */
+    backdrop-filter: blur(10px); /* Blur effect */
+    -webkit-backdrop-filter: blur(10px); /* For Safari */
+}
+
